fix: Styling on GovBanner makes text hard to read (#986)
* add initial GovBanner stories

* overrides css making text inside of gov banner expanded black

* rescopes the govbanner test styling to the defaultlayout css module instead of in the gov banner styling

* overrides css making text inside of gov banner expanded black

* rescopes the govbanner test styling to the defaultlayout css module instead of in the gov banner styling

* fix: text for GovBanner in error layout

* test: add GovBanner to storybook with all variations

* fix: correct styling and make there be one GovBanner style

* fix: lighten chevron

* change chevron to improve contrast

---------

--- a/src/layout/LoginLayout/LoginLayout.module.scss
+++ b/src/layout/LoginLayout/LoginLayout.module.scss
@@ -16,36 +16,6 @@
 .layoutLogin {
   :global {
     @include gov-banner;
-    .usa-banner {
-      background-color: color('base-lighter');
-      .usa-banner__inner,
-      .usa-banner__content {
-        max-width: 559px;
-        padding-left: 0;
-        padding-right: 0;
-      }
-      .usa-banner__button,
-      .usa-banner__button[aria-expanded='true'] {
-        color: color('primary');
-        &:hover {
-          color: color('primary-dark');
-          &:after {
-            background-color: color('primary');
-          }
-        }
-        &:after {
-          background-color: color('primary');
-        }
-      }
-      .usa-banner__header,
-      .usa-banner__content {
-        color: color('ink');
-      }
-    }
-
-    .usa-banner__header-text {
-      color: color('base-darker');
-    }
   }
 
   .page-site-notice {
